public/css/application.css
/* GLOBAL STYLESHEET: FORM.CSS
 * Global stylesheet for form elements
 */

#application_logo {
	position: absolute;
	top: 170px;
	left: 50%;
	padding-left: 30px;
	padding-right: 30px;
	transform: translateX(-50%);
	max-width: 100%;
}

#intro_graphics {
	width: 100%;
	margin-bottom: 20px;
}

fieldset {
	padding: 50px 0px;
	display: flex;
	align-items: flex-end;
	justify-content: center;
	flex-wrap: wrap;
}

.team_icon {
	display: flex;
	flex-wrap: wrap;
	align-content: center;
	justify-content: center;
	margin-top: 25px;
}

.miscellaneous_icon {
	display: flex;
	flex-wrap: wrap;
	align-content: center;
	justify-content: center;
	margin-top: 10px;
}

.form label {
	padding-left: 5px;
}

.form input,
.form input:focus,
.form input[readonly] {
	border-radius: 12px;
	width: 100%;
	margin-bottom: 20px;
}

.form input .radio-input {
	margin: 0px;
}

.form select {
	border-radius: 12px;
	background-color: white;
	width: 100%;
	margin-bottom: 20px;
}

input[type="file"] {
	display: none;
}

.file-upload,
button {
	background-color: var(--green);
	color: var(--white);
	display: inline-block;
	padding: 8px 12px;
	cursor: pointer;
	border-radius: 12px;
	border: none;
}

/*
.ideahacks-form {
	font-family: "Roboto";
}

.ideahacks-form label {
	text-transform: capitalize;
	text-align: center;
	font-size: 18px;
	line-height: 20px;
	font-weight: normal;
	margin-left: 5px;
	margin-bottom: 5px;
}

.form input,
.form input:focus,
.form input[readonly] {
	border-radius: 12px;
	background-color: white;
	width: 80%;
	margin-bottom: 0px;
}

.ideahacks-form select {
	border-radius: 12px;
	background-color: white;
	width: 80%;
	margin-bottom: 0px;
}

input[type="file"] {
	display: none;
}

.file-upload {
	background-color: #2a2d4e;
	display: inline-block;
	padding: 8px 12px;
	cursor: pointer;
	border-radius: 12px;
}

.ideahacks-form input::placeholder {
	color: #f2ccb5;
}
*/

